# agent_flow

./: .gitignore  DESIGN.md  POETRY.md  README.md  pyproject.toml
agentflow/: __init__.py  server.py
agentflow/api/: server.py
agentflow/cli/: __init__.py  main.py
agentflow/core/: __init__.py  context.py  flow_spec.py  pipeline.py
agentflow/mcp/: README.md
agentflow/mcp/servers/: code-executor-server.json  database-server.json  file-system-server.json  search-server.json  weather-server.json
agentflow/memory/: __init__.py
agentflow/models/: __init__.py  base.py  openai.py  registry.py
agentflow/nodes/: __init__.py  agent_skill.py  base.py  conditional.py  loop.py  mcp_server.py  parallel.py  registry.py  script.py
agentflow/skills/: __init__.py  base.py  registry.py  research_analyst.py
agentflow/tests/: __init__.py
agentflow/tests/core/: test_context.py  test_flow_spec.py  test_pipeline.py
agentflow/tests/nodes/: test_nodes.py
examples/agent_skill/: README.md  custom_skills.py
examples/flows/: hello-world.yaml
examples/mcp_server/: README.md  weather_server.py
skills/: README.md
skills/code-reviewer/: skill.json
skills/customer-service/: skill.json
skills/data-analyst/: skill.json
skills/smart-summarizer/: skill.json
skills/translator/: skill.json
skills/vision-analyzer/: skill.json
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-old/: index.html  package.json
web-old/src/: App.tsx  index.css  vite-env.d.ts
web-old/src/api/: client.ts
web-old/src/hooks/: useFlowEditor.ts
web-old/src/pages/: Dashboard.tsx
web-old/src/utils/: index.ts
web/src/: App.tsx
web/src/api/: client.ts
(+43 files in other folders)
